--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,5 +1,12 @@
 ------------- MONOLITHICMEDIA TODO -------------
 ------------- GENERAL TODO -------------
+Add authentication API that allows modifying of login
+	This will enable stuff like AD authentication
+Completely REDO API for permissions, it currently sucks, should be more like Drupal
+Remove the functionality that uses Filetype = FOLDER
+Remove the functionality that puts FILE as the Filetype if there is no extension
+If it is a folder the Filemime should always be httpd/unix-directory
+If there is no extension Filetype should be empty
 Add to error_logging API, allow user to specify output files and what errors to output using the PHP ini bitwise syntax
 Add sitewatch as a setting to enable the link and logo in the templates
 Fix watched list
