git-svn-id: svn://localhost/Media%20Server@390 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+2011-03-13
+Compliance corrections
+Jquery search textbox and login textboxes
+
 2010-12-26
 Worked on Music Downloader script
 Fixed up some session features
