git-svn-id: svn://localhost/Media%20Server@392 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,4 +1,7 @@
-2011-03-13
+2011-01-20
+Worked hard on language plugin, mostly working, Google API needs more corrections
+
+2011-01-13
 Compliance corrections
 Jquery search textbox and login textboxes
 
