git-svn-id: svn://localhost/Media%20Server@399 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+2011-10-16
+Started TuneGazelle template
+Remove AdoDB, system now uses MySQLi
+
 2011-01-31
 Finished language plugin, still need to replace all the text with the lang call
 Big fixes
